DnD: support possibleActions() coming from the drop event

respect the possible actions that the clients sent and
enable only those (still checking if the url can be copied or can be moved)

just always allow a link as before, as the link action is not supported by
the wayland protocol

BUG:505247